tests/cases/errors/parser/stmt_continue.vnm
fn main() {
  let x = 0;
  while (x < 10) {
    print x;
    if (x == 5) {
      continue
    }
    x = x + 1;
  }
  return 0;
}

main();
